# DecFSM

./: CMakeLists.txt  README.md  build.bat
include/: DecFSM.h
lib/Debug/: DecFSM.lib
src/: dec_fsm.cpp
test/: test.cpp
